Samples/errors.cdb
// Assignment statement
@real i, j;
@notreal k; // error: Type does not exist
i = 2 // error: Missing semicolon
i = 2;
k = 1; // error: Variable does not exist
// If statement
if (i == 2)
	j = 3.4;
else {
	j = 4.3;
	j = 1.3; 
}
// Do loop
do {
	i = i + 1;
} while (i < 10);
// For loop
for (i = 0; i < 10; i = i + 1) {
    j = i;
}
// While loop
while (j < 0) {
    j = j - 1;
}